--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,7 @@ body{
     font-size:16px;
     margin:0;
     padding:0;
+    background: #1e1f24;
 }
 #cabecera{
     background:#33A;
@@ -31,4 +32,5 @@ body{
 }
 #post{
     padding:1em;
+    background:white;
 }
